--- a/south.html
+++ b/south.html
@@ -80,6 +80,8 @@
 		</div>
 </div>	
 
+<iframe src="https://www.google.com/maps/d/embed?mid=1sOwjDxW1ewrpxsayHGvj8ltAttDd-niA" width="640" height="480"></iframe>
+
 <!-- scripts -->
 <script src="./scripts.js"></script>
 </body>
