added the website structure and most content

--- a/south.html
+++ b/south.html
@@ -21,13 +21,13 @@
 				</h3>
 			</div>
 			<p>
-				South London is famous for its art students and a more laid-back vibe (unless it's wealthy Chelsea, that is).
+				South London is famous for its art students and laid-back vibe (unless it's wealthy Chelsea, that is).
 			</p>
 		</div>
 	</div>
 </div>
 	<div class="row">
-		<div class="class="col-md-6">
+		<div class="class="container">
 			<img alt="Chelsea Physic Garden" class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/5/57/Chelsea_Physic_Garden_with_house.jpg" width="550" height="350 />
 		</div>
 </div>		
