--- a/north.html
+++ b/north.html
@@ -11,6 +11,61 @@
 </head>
 
 <body>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="page-header">
+				<h1>
+					North London
+				</h1>
+			</div>
+			<p>
+				North London is famous for its parties. It also has plenty of cool museums.
+			</p>
+		</div>
+	</div>
+	<div class="row">
+			<div class="col-md-6">
+			<img alt="Bootstrap Image Preview" src="http://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-6">
+			<p class="text-left">
+			</p>
+			<p class="MsoNormal">
+				<span>The Jazz Cafe is a vegan-friendly restaurants, concert space, and a club space, with soul, disco and house playing every Saturday.</span>
+				
+			</p>
+			
+		</div>
+	
+	</div>
+	<br />
+	<div class="row">
+		<div class="col-md-6">
+			<p class="MsoNormal">
+				<span>Wellcome Collection is a free museum and art collection dedicated to health, science, and medicine. It also has a lovely, comfortable library open to the public.</span>
+				
+			</p>
+			
+		</div>
+		<div class="col-md-6">
+			<img class="img-responsive" alt="Wellcome Collection" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Wellcome_Collection_Reading_Room.jpg/1280px-Wellcome_Collection_Reading_Room.jpg" width="550" height="350" />
+		</div>
+	</div>
+	<br />
+	<div class="row">
+			<div class="col-md-6">
+			<img alt="Bootstrap Image Preview" src="http://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+
+		<div class="col-md-6">
+			<p>
+				Have you ever wondered what psychoanalysis is? Find out in the Freud Museum, based in what used to be the actual home of the late Freud family.
+			</p>
+		</div>
+	
+	</div>
+</div>
 
 <script src="./scripts.js"></script>
 </body>
