--- a/west.html
+++ b/west.html
@@ -4,13 +4,68 @@
 
 <head>
   <link href='css/bootstrap.css' rel='stylesheet'>
-  <link rel='stylesheet' type='text/css' href=' west.css'>
+  <link rel='stylesheet' type='text/css' href=' north.css'>
   <!-- makes sure content is the same width as the device -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script   src="http://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
 </head>
 
 <body>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="page-header">
+				<h1>
+					West London
+				</h1>
+			</div>
+			<p>
+				West London: it's not just Oxford Street!
+			</p>
+		</div>
+	</div>
+	<div class="row">
+			<div class="col-md-6">
+			<img class="img-responsive" alt="The Kyoto Garden" src="https://vg-images.condecdn.net/image/zkejv89JGXG/crop/810" width="550" height="350" />
+		</div>
+		<div class="col-md-6">
+			<p class="text-left">
+			</p>
+			<p class="MsoNormal">
+				<span>The Kyoto Gardens in Holland Park has been a unique place on the London map (of parks) since 1991. A great relaxing space for all Japanophiles (or fans of peacocks). </span>
+				
+			</p>
+			
+		</div>
+	
+	</div>
+	<br />
+	<div class="row">
+		<div class="col-md-6">
+			<p class="MsoNormal">
+				<span>Wellcome Collection is a free museum and art collection dedicated to health, science, and medicine. It also has a lovely, comfortable library open to the public.</span>
+				
+			</p>
+			
+		</div>
+		<div class="col-md-6">
+			<img class="img-responsive" alt="Wellcome Collection" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Wellcome_Collection_Reading_Room.jpg/1280px-Wellcome_Collection_Reading_Room.jpg" width="550" height="350" />
+		</div>
+	</div>
+	<br />
+	<div class="row">
+			<div class="col-md-6">
+			<img alt="Bootstrap Image Preview" src="http://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+
+		<div class="col-md-6">
+			<p>
+				Have you ever wondered what psychoanalysis is? Find out in the Freud Museum, based in what used to be the actual home of the late Freud family.
+			</p>
+		</div>
+	
+	</div>
+</div>
 
 <script src="./scripts.js"></script>
 </body>
