added all the page content and nav bar

--- a/west.html
+++ b/west.html
@@ -33,7 +33,6 @@
 			</p>
 			<p class="MsoNormal">
 				<span>The Kyoto Gardens in Holland Park has been a unique place on the London map (of parks) since 1991. A great relaxing space for all Japanophiles (or fans of peacocks). </span>
-				
 			</p>
 			
 		</div>
@@ -43,29 +42,51 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p class="MsoNormal">
-				<span>Wellcome Collection is a free museum and art collection dedicated to health, science, and medicine. It also has a lovely, comfortable library open to the public.</span>
-				
+				<span>A short walk from Oxford Street, Pollock’s Toy Museum is a space dedicated to toys, the slightly forgotten toy theatre in particular.</span>
 			</p>
 			
 		</div>
 		<div class="col-md-6">
-			<img class="img-responsive" alt="Wellcome Collection" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Wellcome_Collection_Reading_Room.jpg/1280px-Wellcome_Collection_Reading_Room.jpg" width="550" height="350" />
+			<img class="img-responsive" alt="Pollock’s Toy Museum" src="https://upload.wikimedia.org/wikipedia/commons/c/c8/Pollock%27s_Toy_Museum%2C_Scala_Street_W1_-_geograph.org.uk_-_1568357.jpg" width="550" height="350" />
 		</div>
 	</div>
 	<br />
 	<div class="row">
 			<div class="col-md-6">
-			<img alt="Bootstrap Image Preview" src="http://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+			<img class="img-responsive" alt="Choccywoccydoodah" src="https://upload.wikimedia.org/wikipedia/commons/c/c8/North_Pole_window_display_-_geograph.org.uk_-_1597404.jpg" width="550" height="350" />
 		</div>
 
 		<div class="col-md-6">
 			<p>
-				Have you ever wondered what psychoanalysis is? Find out in the Freud Museum, based in what used to be the actual home of the late Freud family.
+				Choccywoccydoodah, beyond its crazy name, offers a range of equally crazy handmade sugary delights (in the photo here, the whole display is made of chocolate!)
 			</p>
 		</div>
-	
+
+	</div>
+	<br />
+	<div class="row">
+		<div class="col-md-6">
+			<p class="MsoNormal">
+				<span>sketch is a restaurant with extremely Instagram-friendly fluffy pink interior. “Vogue” described it as a great place of tea “with a twist”.</span>
+			</p>
+			
+		</div>
+		<div class="col-md-6">
+			<img class="img-responsive" alt="sketch" src="https://vg-images.condecdn.net/image/xryaJPB3bza/crop/810" width="550" height="350" />
+		</div>
 	</div>
 </div>
+
+<!-- navigation bar -->	
+<div class="row">
+		<div class="col-md-12">
+			<ul class="nav">
+				<li class="nav-item">
+					<a class="nav-link active, text-center" href="https://todolondon.github.io/home.html" >Back to home page</a>
+				</li>
+			</ul>
+		</div>
+</div>	
 
 <script src="./scripts.js"></script>
 </body>
