--- a/east.html
+++ b/east.html
@@ -16,7 +16,7 @@
 		<div class="col-md-12">
 			<div class="page-header">
 				<h1>
-					West London
+					East London
 				</h1>
 			</div>
 			<p>
@@ -26,13 +26,10 @@
 	</div>
 	<div class="row">
 			<div class="col-md-6">
-			<img class="img-responsive" alt="The Kyoto Garden" src="https://vg-images.condecdn.net/image/zkejv89JGXG/crop/810" width="550" height="350" />
+			<img class="img-responsive" alt="brilliant corners" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/10653733_852165984814178_8657786671994543187_n.jpg?oh=5726ee19c0a68425a6d5da5621de9f06&oe=5B4510E2" width="550" height="350" />
 		</div>
 		<div class="col-md-6">
-			<p class="text-left">
-			</p>
-			<p class="MsoNormal">
-				<span>The Kyoto Gardens in Holland Park has been a unique place on the London map (of parks) since 1991. A great relaxing space for all Japanophiles (or fans of peacocks). </span>
+			<p>brilliant corners is a Japanese restaurant with famous DJs often playing. Find out for yourself:
 			</p>
 			
 		</div>
@@ -45,13 +42,13 @@
 	
 	<div class="row">
 		<div class="col-md-6">
-			<p class="MsoNormal">
-				<span>A short walk from Oxford Street, Pollock’s Toy Museum is a space dedicated to toys, the slightly forgotten toy theatre in particular.</span>
+			<p>
+				The Vikor Wynd Museum of Curiosities, Fine Art and Natural History is a museum of all things unusual, from taxidermy to Happy Meal toys all in one place. Go explore with a cup of tea or a cocktail.
 			</p>
 			
 		</div>
 		<div class="col-md-6">
-			<img class="img-responsive" alt="Pollock’s Toy Museum" src="https://upload.wikimedia.org/wikipedia/commons/c/c8/Pollock%27s_Toy_Museum%2C_Scala_Street_W1_-_geograph.org.uk_-_1568357.jpg" width="550" height="350" />
+			<img class="img-responsive" alt="The Vikor Wynd Museum" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/The_Viktor_Wynd_Museum_cabinet_of_curiosities_23.jpg/800px-The_Viktor_Wynd_Museum_cabinet_of_curiosities_23.jpg" width="550" height="350" />
 		</div>
 	</div>
 	<br />
