added content on East London

--- a/east.html
+++ b/east.html
@@ -54,12 +54,12 @@
 	<br />
 	<div class="row">
 			<div class="col-md-6">
-			<img class="img-responsive" alt="Choccywoccydoodah" src="https://upload.wikimedia.org/wikipedia/commons/c/c8/North_Pole_window_display_-_geograph.org.uk_-_1597404.jpg" width="550" height="350" />
+			<img class="img-responsive" alt="Present & Correct" src="https://dv5lc0nz60nfv.cloudfront.net/contentFiles/image/cities/london/venues/p1070496-720x390.jpg" width="550" height="350" />
 		</div>
 
 		<div class="col-md-6">
 			<p>
-				Choccywoccydoodah, beyond its crazy name, offers a range of equally crazy handmade sugary delights (in the photo here, the whole display is made of chocolate!)
+				Present & Correct is lovely shop with all kinds of very designer stationery which was handpicked by the owners (designers, of course).
 			</p>
 		</div>
 
@@ -68,12 +68,12 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p class="MsoNormal">
-				<span>sketch is a restaurant with extremely Instagram-friendly fluffy pink interior. “Vogue” described it as a great place of tea “with a twist”.</span>
+				<span>Barbican is the largest European venue dedicated to arts (as well as a building complex with really pretty flats, an indoor conservatory open to the public on weekends, a cinema...) </span>
 			</p>
 			
 		</div>
 		<div class="col-md-6">
-			<img class="img-responsive" alt="sketch" src="https://vg-images.condecdn.net/image/xryaJPB3bza/crop/810" width="550" height="350" />
+			<img class="img-responsive" alt="Barbican" src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Barbican-arts-centre-large.jpg" width="550" height="350" />
 		</div>
 	</div>
 </div>
